fix header on mobile

--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -7,6 +7,9 @@
   display: flex;
   justify-content: space-between;
   padding: $s-size 0;
+  @media (max-width: $desktop-breakpoint) {
+    padding: 0 $s-size;
+  }
 }
 
 .header__title {
