--- a/src/global/styles/base/_settings.scss
+++ b/src/global/styles/base/_settings.scss
@@ -16,12 +16,16 @@ $on-card: #fffffe;
 
 // Font Size
 $font-size-large: 1.8rem;
+$font-size-medium: 1.6rem;
 $font-size-small: 1.4rem;
 
 // Spacing
+
 $xs-size: 0.8rem;
 $s-size: 1.2rem;
+$sh-size: calc(#{$s-size} / 2);
 $m-size: 1.6rem;
+$mh-size: calc(#{$s-size} / 2);
 $ml-size: 2.4rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
