--- a/src/global/styles/components/_content-container.scss
+++ b/src/global/styles/components/_content-container.scss
@@ -2,6 +2,9 @@
   margin: 0 auto;
   padding: $xs-size 54px;
   max-width: 1140px;
+  @media (max-width: $desktop-breakpoint) {
+    padding: $s-size;
+  }
 }
 
 .container--flex-col {
